--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7974,7 +7974,7 @@ h6 {
 }
 
 .page-content {
-  padding-top: 150px;
+  padding-top: 130px;
 }
 
 /*custom input file logo*/
@@ -8395,3 +8395,12 @@ h6 {
 }
 
 
+.list-service .detail-service{
+  background-color: #eef8f2;
+  border-radius: 5px;
+}
+.list-service .detail-service:hover{
+  background-color: #fff;
+  border: 1px solid #00b14f;
+
+}
